breakingChange: hide raw primitives using proxxy